prace nad integracja z jenkinsem, poprawki w testng.xml